Bug 380379 - hotspot problem in kubuntu 17.04
Summary: hotspot problem in kubuntu 17.04
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Networking in general (other bugs)
Version First Reported In: master
Platform: Kubuntu Linux
: NOR normal
Target Milestone: 1.0
Assignee: Jan Grulich
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-05-31 06:15 UTC by aref mozafari
Modified: 2024-12-23 18:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description aref mozafari 2017-05-31 06:15:32 UTC
hotspot doesn't work .
Comment 1 Jan Grulich 2017-05-31 11:33:13 UTC
Thank you for a very exhausting description, perhaps you want to add more information about your problem.
Comment 2 aref mozafari 2017-05-31 13:56:22 UTC
(In reply to Jan Grulich from comment #1)
> Thank you for a very exhausting description, perhaps you want to add more
> information about your problem.

sure body . edited .
Comment 3 aref mozafari 2017-05-31 13:57:03 UTC
sdsdsd
Comment 4 aref mozafari 2017-05-31 14:04:22 UTC
(In reply to aref mozafari from comment #0)
> hotspot doesn't work .

when i use the network manager window to create a access point (Wifi Shared)
it will be create successfully , but when i don't see any "connect" button to active it . actually my Wireless network Card has the option called AP mode .
My distribution is Kubuntu 17.04 Zesty Zapus .
sorry about first comment .
Comment 5 Jan Grulich 2017-06-01 12:55:25 UTC
1) What is the output from "nmcli connection up your_connection_name"
2) What is the output from "nmcli -f all device show"
Comment 6 Jan Grulich 2017-06-01 13:19:48 UTC
Git commit 029e81701499b9b74222ec62eac1a30c80659a28 by Jan Grulich.
Committed on 01/06/2017 at 13:19.
Pushed by grulich into branch 'Plasma/5.10'.

Restrict shared connections to permanent hardware address

This one will not change and NM will allow to connect to it

M  +1    -1    kcm/kcm.cpp
M  +2    -2    libs/editor/widgets/hwaddrcombobox.cpp

https://commits.kde.org/plasma-nm/029e81701499b9b74222ec62eac1a30c80659a28
Comment 7 aref mozafari 2017-06-01 16:36:22 UTC
(In reply to Jan Grulich from comment #5)
> 1) What is the output from "nmcli connection up your_connection_name"
> 2) What is the output from "nmcli -f all device show"

 
1) nmcli connection up test :

Error: Connection activation failed: No suitable device found for this connection.




2) nmcli -f all device show

GENERAL.DEVICE:                         enx0c5b8f279a64
GENERAL.TYPE:                           ethernet
GENERAL.NM-TYPE:                        NMDeviceEthernet
GENERAL.VENDOR:                         HUAWEI_MOBILE
GENERAL.PRODUCT:                        HUAWEI_MOBILE
GENERAL.DRIVER:                         cdc_ether
GENERAL.DRIVER-VERSION:                 22-Aug-2005
GENERAL.FIRMWARE-VERSION:               CDC Ethernet Device
GENERAL.HWADDR:                         0C:5B:8F:27:9A:64
GENERAL.MTU:                            1500
GENERAL.STATE:                          100 (connected)
GENERAL.REASON:                         0 (No reason given)
GENERAL.UDI:                            /sys/devices/pci0000:00/0000:00:1d.7/usb1/1-3/1-3:1.0/net/enx0c5b8f279a64
GENERAL.IP-IFACE:                       enx0c5b8f279a64
GENERAL.IS-SOFTWARE:                    no
GENERAL.NM-MANAGED:                     yes
GENERAL.AUTOCONNECT:                    yes
GENERAL.FIRMWARE-MISSING:               no
GENERAL.NM-PLUGIN-MISSING:              no
GENERAL.PHYS-PORT-ID:                   --
GENERAL.CONNECTION:                     Wired connection 2
GENERAL.CON-UUID:                       95622ca3-9a59-3a9d-8609-1b887be30670
GENERAL.CON-PATH:                       /org/freedesktop/NetworkManager/ActiveConnection/0
GENERAL.METERED:                        no (guessed)
CAPABILITIES.CARRIER-DETECT:            yes
CAPABILITIES.SPEED:                     unknown
CAPABILITIES.IS-SOFTWARE:               no
WIRED-PROPERTIES.CARRIER:               on
CONNECTIONS.AVAILABLE-CONNECTION-PATHS: /org/freedesktop/NetworkManager/Settings/{1}
CONNECTIONS.AVAILABLE-CONNECTIONS[1]:   95622ca3-9a59-3a9d-8609-1b887be30670 | Wired connection 2
IP4.ADDRESS[1]:                         192.168.8.100/24
IP4.GATEWAY:                            192.168.8.1
IP4.ROUTE[1]:                           dst = 169.254.0.0/16, nh = 0.0.0.0, mt = 1000
IP4.DNS[1]:                             192.168.8.1
DHCP4.OPTION[1]:                        requested_routers = 1
DHCP4.OPTION[2]:                        requested_domain_search = 1
DHCP4.OPTION[3]:                        requested_time_offset = 1
DHCP4.OPTION[4]:                        requested_domain_name = 1
DHCP4.OPTION[5]:                        requested_rfc3442_classless_static_routes = 1
DHCP4.OPTION[6]:                        requested_broadcast_address = 1
DHCP4.OPTION[7]:                        requested_wpad = 1
DHCP4.OPTION[8]:                        requested_netbios_scope = 1
DHCP4.OPTION[9]:                        next_server = 0.0.0.0
DHCP4.OPTION[10]:                       expiry = 1496434916
DHCP4.OPTION[11]:                       requested_interface_mtu = 1
DHCP4.OPTION[12]:                       requested_subnet_mask = 1
DHCP4.OPTION[13]:                       dhcp_lease_time = 86400
DHCP4.OPTION[14]:                       dhcp_message_type = 5
DHCP4.OPTION[15]:                       ip_address = 192.168.8.100
DHCP4.OPTION[16]:                       requested_static_routes = 1
DHCP4.OPTION[17]:                       requested_domain_name_servers = 1
DHCP4.OPTION[18]:                       dhcp_renewal_time = 43200
DHCP4.OPTION[19]:                       routers = 192.168.8.1
DHCP4.OPTION[20]:                       broadcast_address = 192.168.8.255
DHCP4.OPTION[21]:                       domain_name_servers = 192.168.8.1 192.168.8.1
DHCP4.OPTION[22]:                       requested_ntp_servers = 1
DHCP4.OPTION[23]:                       requested_netbios_name_servers = 1
DHCP4.OPTION[24]:                       dhcp_rebinding_time = 75600
DHCP4.OPTION[25]:                       requested_ms_classless_static_routes = 1
DHCP4.OPTION[26]:                       subnet_mask = 255.255.255.0
DHCP4.OPTION[27]:                       network_number = 192.168.8.0
DHCP4.OPTION[28]:                       requested_host_name = 1
DHCP4.OPTION[29]:                       dhcp_server_identifier = 192.168.8.1
IP6.ADDRESS[1]:                         fe80::dc9b:4701:e4f1:831a/64
IP6.GATEWAY:                            

GENERAL.DEVICE:                         wlxc4e984124945
GENERAL.TYPE:                           wifi
GENERAL.NM-TYPE:                        NMDeviceWifi
GENERAL.VENDOR:                         ATHEROS
GENERAL.PRODUCT:                        USB2.0 WLAN
GENERAL.DRIVER:                         ath9k_htc
GENERAL.DRIVER-VERSION:                 4.10.0-19-generic
GENERAL.FIRMWARE-VERSION:               1.4
GENERAL.HWADDR:                         16:AC:3F:B9:00:3B
GENERAL.MTU:                            0
GENERAL.STATE:                          30 (disconnected)
GENERAL.REASON:                         42 (The supplicant is now available)
GENERAL.UDI:                            /sys/devices/pci0000:00/0000:00:1d.7/usb1/1-6/1-6:1.0/net/wlxc4e984124945
GENERAL.IP-IFACE:                       
GENERAL.IS-SOFTWARE:                    no
GENERAL.NM-MANAGED:                     yes
GENERAL.AUTOCONNECT:                    yes
GENERAL.FIRMWARE-MISSING:               no
GENERAL.NM-PLUGIN-MISSING:              no
GENERAL.PHYS-PORT-ID:                   --
GENERAL.CONNECTION:                     --
GENERAL.CON-UUID:                       --
GENERAL.CON-PATH:                       --
GENERAL.METERED:                        unknown
CAPABILITIES.CARRIER-DETECT:            no
CAPABILITIES.SPEED:                     unknown
CAPABILITIES.IS-SOFTWARE:               no
WIFI-PROPERTIES.WEP:                    yes
WIFI-PROPERTIES.WPA:                    yes
WIFI-PROPERTIES.WPA2:                   yes
WIFI-PROPERTIES.TKIP:                   yes
WIFI-PROPERTIES.CCMP:                   yes
WIFI-PROPERTIES.AP:                     yes
WIFI-PROPERTIES.ADHOC:                  yes
WIFI-PROPERTIES.2GHZ:                   yes
WIFI-PROPERTIES.5GHZ:                   no
AP[1].*:                                 
AP[1].SSID:                             heshmathsa
AP[1].MODE:                             Infra
AP[1].CHAN:                             10
AP[1].RATE:                             54 Mbit/s
AP[1].SIGNAL:                           19
AP[1].BARS:                             ▂___
AP[1].SECURITY:                         WPA1 WPA2
CONNECTIONS.AVAILABLE-CONNECTION-PATHS: 

GENERAL.DEVICE:                         enp2s0
GENERAL.TYPE:                           ethernet
GENERAL.NM-TYPE:                        NMDeviceEthernet
GENERAL.VENDOR:                         Realtek Semiconductor Co., Ltd.
GENERAL.PRODUCT:                        RTL8111/8168/8411 PCI Express Gigabit Ethernet Controller (M3A78 Series Motherboard)
GENERAL.DRIVER:                         r8169
GENERAL.DRIVER-VERSION:                 2.3LK-NAPI
GENERAL.FIRMWARE-VERSION:               
GENERAL.HWADDR:                         20:CF:30:C8:7C:ED
GENERAL.MTU:                            1500
GENERAL.STATE:                          20 (unavailable)
GENERAL.REASON:                         2 (Device is now managed)
GENERAL.UDI:                            /sys/devices/pci0000:00/0000:00:1c.3/0000:02:00.0/net/enp2s0
GENERAL.IP-IFACE:                       
GENERAL.IS-SOFTWARE:                    no
GENERAL.NM-MANAGED:                     yes
GENERAL.AUTOCONNECT:                    yes
GENERAL.FIRMWARE-MISSING:               no
GENERAL.NM-PLUGIN-MISSING:              no
GENERAL.PHYS-PORT-ID:                   --
GENERAL.CONNECTION:                     --
GENERAL.CON-UUID:                       --
GENERAL.CON-PATH:                       --
GENERAL.METERED:                        unknown
CAPABILITIES.CARRIER-DETECT:            yes
CAPABILITIES.SPEED:                     unknown
CAPABILITIES.IS-SOFTWARE:               no
WIRED-PROPERTIES.CARRIER:               off
CONNECTIONS.AVAILABLE-CONNECTION-PATHS: 

GENERAL.DEVICE:                         lo
GENERAL.TYPE:                           loopback
GENERAL.NM-TYPE:                        NMDeviceGeneric
GENERAL.VENDOR:                         
GENERAL.PRODUCT:                        
GENERAL.DRIVER:                         unknown
GENERAL.DRIVER-VERSION:                 
GENERAL.FIRMWARE-VERSION:               
GENERAL.HWADDR:                         00:00:00:00:00:00
GENERAL.MTU:                            65536
GENERAL.STATE:                          10 (unmanaged)
GENERAL.REASON:                         0 (No reason given)
GENERAL.UDI:                            /virtual/device/placeholder/0
GENERAL.IP-IFACE:                       lo
GENERAL.IS-SOFTWARE:                    yes
GENERAL.NM-MANAGED:                     no
GENERAL.AUTOCONNECT:                    yes
GENERAL.FIRMWARE-MISSING:               no
GENERAL.NM-PLUGIN-MISSING:              no
GENERAL.PHYS-PORT-ID:                   --
GENERAL.CONNECTION:                     --
GENERAL.CON-UUID:                       --
GENERAL.CON-PATH:                       --
GENERAL.METERED:                        unknown
CAPABILITIES.CARRIER-DETECT:            yes
CAPABILITIES.SPEED:                     unknown
CAPABILITIES.IS-SOFTWARE:               yes
CONNECTIONS.AVAILABLE-CONNECTION-PATHS: 
IP4.ADDRESS[1]:                         127.0.0.1/8
IP4.GATEWAY:                            
IP6.ADDRESS[1]:                         ::1/128
IP6.GATEWAY:
Comment 8 Jan Grulich 2017-06-02 07:15:10 UTC
Thank you for the information, I've been able to test this myself and the issue should be fixed now, you will get it with newer Plasma version.
Comment 9 aref mozafari 2017-06-02 07:24:26 UTC
(In reply to Jan Grulich from comment #8)
> Thank you for the information, I've been able to test this myself and the
> issue should be fixed now, you will get it with newer Plasma version.

your welcome . but when will release the newer Plasma version ?
Comment 10 Ben Cooksley 2024-12-23 18:23:43 UTC
Bulk transfer as requested in T17796