Restrict shared connections to permanent hardware address

This one will not change and NM will allow to connect to it

BUG:380379